jwt, unit tests, many functions